# prompt-preflight

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  conftest.py  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  docs.yml  live.yml  publish.yml
deploy/: grafana-dashboard.json
deploy/launchd/: com.prompt-preflight.proxy.plist
deploy/systemd/: prompt-preflight-proxy.service
deploy/windows/: Register-Proxy.ps1
docs/: architecture.md  backends.md  deploy.md  index.md  proxy.md  quickstart.md  security.md
examples/: settings.json
packaging/homebrew/: prompt-preflight.rb
packaging/scoop/: prompt-preflight.json
packaging/shell/: enhance-widget.ps1  enhance-widgets.sh
prompt_enhancer/: __init__.py  __main__.py  cli.py  config.py  engine.py  hook.py  launcher.py  policy.py  proxy.py  safety.py  system_prompt.py
scripts/: eval_prompts.py
tests/: test_cli.py  test_config.py  test_docs.py  test_engine.py  test_eval.py  test_hook.py  test_integration_live.py  test_launcher.py  test_policy.py  test_proxy.py  test_proxy_http.py  test_safety.py
